@@ -1,5 +1,10 @@
 2008-02-20  Alexander Larsson  <alexl@redhat.com>
 
+	* daemon/daemon-main.c (send_spawned):
+	Fix "_" spew.
+	
+2008-02-20  Alexander Larsson  <alexl@redhat.com>
+
 	* daemon/gvfsbackendsftp.c:
 	Fix spelling in string
 
